# cpp-app-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
src/: main.cpp
tests/: test_main.cpp
